# bootcamp

./: .gitignore
ex-basics-1/: .env  README.md  pyproject.toml  swapna_hello.py
ex-basics-2/: README.md  pyproject.toml  swapna_hello.py
ex-basics-2/swapna_hello_rich.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ex-basics-3/: pyproject.toml  readme.md
ex_basics_3/: desktop.ini
ex_basics_3/ex_basics_3/: cli.py
